--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Ri-Hong.github.io/htn-2023-frontend-developer-challenge/events",
+  "homepage": "https://ri-hong.github.io/htn-2023-frontend-developer-challenge/",
   "name": "htn-2023-frontend-developer-challenge",
   "version": "0.1.0",
   "private": true,
